# image-morphing-tool

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
building/: post_build.py  pre_build.py
include/: Application.h
include/Stroke/: Stroke.h  StrokeDrawer.h  StrokeManager.cpp  StrokeManager.h
include/Viewport/: Viewport.h
include/core/: utils.h
include/core/Stroke/: StrokeDrawer.h  StrokeManager.h
include/core/Tool/: ITool.h  Tool.h  ToolCanvasEvents.h  ToolSnapshotEvents.h  ToolViewportEvents.h
include/core/drawables/: Document.h  Image.h
include/core/exceptions/: Exception.h  FileIOError.h  NullPointerException.h  RangeException.h
include/core/history/: History.h  Memento.h  Snapshot.h
include/events/: CEvent.h  CPaintEvent.h  DocumentRedrawEvent.h  LogEvent.h  SnapshotCreateEvent.h  SnapshotCreatedEvent.h  SnapshotRestoreEvent.h  VEvent.h  VKeyEvent.h  VMouseEvent.h  VPaintEvent.h
include/gui/: Application.h  BottomLineWidget.h  Canvas.h  LastLogMessageWidget.h  LogWindow.h  MainWindow.h  ToolBar.h  Viewport.h
include/tools/: CMTSettings.h  CMTVulkanBackend.h  CurveMorphingTool.h  ITool.h  ShaderManager.h  Tool.h
include/tools/gui/: CMTGui.h  CMTSettingsEditor.h  ShadersEditor.h
include/tools/shaders/: ShadersFactory.h
libs/event_emitter/include/: event_emitter.h
libs/render_doc/include/: renderdoc_app.h
src/: Application.cpp  main.cpp
src/Stroke/: Stroke.cpp  StrokeDrawer.cpp  StrokeManager.cpp
src/Viewport/: Viewport.cpp
src/core/Stroke/: Stroke.cpp  StrokeDrawer.cpp  StrokeManager.cpp
src/core/Tool/: Tool.cpp  ToolCanvasEvents.cpp  ToolSnapshotEvents.cpp  ToolViewportEvents.cpp
src/core/drawables/: Document.cpp  Image.cpp
src/core/history/: History.cpp  Snapshot.cpp
src/core/utils/: textFromFile.cpp
src/gui/: Application.cpp  BottomLineWidget.cpp  Canvas.cpp  LastLogMessageWidget.cpp  LogWindow.cpp  MainWindow.cpp  ToolBar.cpp  Viewport.cpp
src/tools/: CMTSettings.cpp  CMTVulkanBackend.cpp  CMYVulkanBackend.cpp  CurveMorphingTool.cpp  ShaderManager.cpp  Tool.cpp
src/tools/gui/: CMTGui.cpp  CMTSettingsEditor.cpp  ShadersEditor.cpp
src/tools/shaders/: ShadersFactory.cpp  compile.py
src/tools/shaders/src/: image_morphing_tool.frag  image_morphing_tool.vert
style/: style.qss
